src/app/components/blocks/header/header.component.scss
@import '../../../../assets/styles/mixins/adaptive-font';
@import '../../../../assets/styles/hamburger';
@import '../../../../assets/styles/dark-theme';
@import '../../../../assets/styles/light-theme';

.header {
  position: fixed;
  z-index: 100;
  height: 90px;
  width: 100%;
  display: flex;
  align-items: center;
  transition: all 0.3s linear;

  .container {
    height: 100%;

    .row {
      height: 100%;
    }
  }

  &.min-header {
    height: 80px;
  }

  @media screen and (width <= 768px) {
    height: 80px;

    &.min-header {
      height: 70px;
    }
  }

  &::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 50;
    transition: background-color 0.3s linear;
  }

  &.light-theme {
    &.min-header {
      box-shadow: 0 0 11px 0 rgb(64 46 33 / 20%);
    }

    &::before {
      background-color: $light-theme-background-color;

      @media screen and (width <= 992px) {
        box-shadow: 0 0 11px 0 rgb(64 46 33 / 20%);
      }
    }
  }

  &.dark-theme {
    &::before {
      background-color: $dark-theme-background-color;

      @media screen and (width <= 992px) {
        box-shadow: 0 0 11px 0 rgb(242 237 220 / 20%);
      }
    }

    &.min-header {
      box-shadow: 0 0 11px 0 rgb(242 237 220 / 20%);
    }
  }
}

.header-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 100%;
}

.header-container-logo {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  z-index: 51;

  &__link {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }

  &__text {
    @include adaptive-value('font-size', 20, 18, 0);

    transition: color 0.3s linear;

    &.light-theme {
      color: $light-theme-color;
    }

    &.dark-theme {
      color: $dark-theme-color;
    }

    font-weight: 600;
  }
}

.header-container-menu {
  z-index: 51;
  display: block;
  height: 100%;

  &.is-active {
    right: 0;
  }

  @media screen and (width <= 992px) {
    position: fixed;
    right: -100%;
    top: 0;
    width: 100%;
    height: 100%;
    transition: all 0.3s linear;
    margin-top: 0;
    z-index: 49;
    overflow-y: auto;
    margin-right: 0;
  }

  &.light-theme {
    @media screen and (width <= 992px) {
      background-color: $light-theme-background-color;
    }
  }

  &.dark-theme {
    @media screen and (width <= 992px) {
      background-color: $dark-theme-background-color;
    }
  }
}

.header-container-menu-list {
  display: flex;
  align-items: center;
  height: 100%;

  @media screen and (width <= 992px) {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding-top: 80px;
    height: 100%;
  }
}

.header-container-menu-list-item {
  margin-left: 78px;

  @media screen and (width <= 1200px) {
    margin-left: 30px;
  }

  @media screen and (width <= 992px) {
    padding: 30px 0;
    margin-left: 0;
  }

  &:first-child {
    margin-left: 15px;
  }

  &__link {
    position: relative;

    @include adaptive-value('font-size', 21, 25, 0);

    font-weight: 700;
    transition: color 0.3s linear;

    &.light-theme {
      color: $light-theme-color;

      &::before {
        background-color: $light-theme-color;
      }
    }

    &.dark-theme {
      color: $dark-theme-color;

      &::before {
        background-color: $dark-theme-color;
      }
    }

    &::before {
      position: absolute;
      transition: all 0.3s linear;
      bottom: -4px;
      content: '';
      height: 2px;
      width: 0;
      border-radius: 20px;
    }

    &.active-link {
      &::before {
        width: 100%;
      }
    }
  }
}

.header-right-side {
  display: flex;
  position: relative;
  z-index: 51;

  .theme-switcher {
    margin: 8px 0 0 20px;

    @media screen and (width >= 993px) {
      margin: 6px 0 0;
    }

    &__icon {
      &:hover {
        cursor: pointer;
      }
    }
  }

  .hamburger {
    padding: 0;
    margin-top: 11px;

    @media screen and (width >= 993px) {
      display: none;
    }

    &.light-theme {
      .hamburger-inner,
      .hamburger-inner::before,
      .hamburger-inner::after {
        background-color: $light-theme-color;
      }
    }

    &.dark-theme {
      .hamburger-inner,
      .hamburger-inner::before,
      .hamburger-inner::after {
        background-color: $dark-theme-color;
      }
    }

    .hamburger-inner {
      top: 0;
    }
  }
}

